fixed demo font links

--- a/font/demo.html
+++ b/font/demo.html
@@ -756,11 +756,11 @@ body {
 }
 </style><style type="text/css">@font-face {
   font-family: 'modernpics';
-  src: url('../font/modernpics.eot?56535676');
-  src: url('../font/modernpics.eot?56535676#iefix') format('embedded-opentype'),
-       url('../font/modernpics.woff?56535676') format('woff'),
-       url('../font/modernpics.ttf?56535676') format('truetype'),
-       url('../font/modernpics.svg?56535676#modernpics') format('svg');
+  src: url('modernpics.eot?73380523');
+  src: url('modernpics.eot?73380523#iefix') format('embedded-opentype'),
+       url('modernpics.woff?73380523') format('woff'),
+       url('modernpics.ttf?73380523') format('truetype'),
+       url('modernpics.svg?73380523#modernpics') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -770,7 +770,7 @@ body {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'modernpics';
-    src: url('../font/modernpics.svg?56535676#modernpics') format('svg');
+    src: url('../font/modernpics.svg?73380523#modernpics') format('svg');
   }
 }
 */
